# llm-project

./: .env.example  .gitignore  Makefile  README.md
backend/: Dockerfile  main.py  pyproject.toml
backend/agents/: files.py  fine_tuning_agent.py  rag_agent.py  semantic_layer_agent.py  sql_agent.py
data/dbt-project/: dbt_profiles.yml  dbt_project.yml
data/dbt-project/models/: _sources.yml  orders.sql  orders.yml  products.sql  products.yml  providers.sql  providers.yml  subscriptions.sql  subscriptions.yml  users.sql  users.yml
data/fine-tuning/01_select_dim/: 51.txt  52.txt  53.txt  68.txt  71.txt
data/fine-tuning/02_select_metric/: 03.txt  54.txt  55.txt  69.txt  72.txt
data/fine-tuning/03_select_dim_metric/: 09.txt  10.txt  12.txt  13.txt  26.txt  44.txt  47.txt  48.txt
data/fine-tuning/04_select_dim_filtre/: 02.txt  41.txt  56.txt  57.txt  70.txt  75.txt
data/fine-tuning/05_select_metric_filtre/: 04.txt  05.txt  07.txt  11.txt  14.txt  18.txt  21.txt  49.txt
data/fine-tuning/06_select_dim_metric_filtre/: 01.txt  30.txt  40.txt  58.txt  59.txt  60.txt
data/fine-tuning/07_add_dim/: 08.txt  16.txt  23.txt  24.txt  25.txt  38.txt  39.txt  80.txt
data/fine-tuning/08_add_metric/: 06.txt  15.txt  17.txt  20.txt  22.txt  42.txt  43.txt  45.txt  46.txt  50.txt
data/fine-tuning/09_add_dim_metric/: 19.txt  27.txt  61.txt  62.txt  63.txt  73.txt
data/fine-tuning/10_add_join_dim/: 64.txt  65.txt  66.txt  67.txt  74.txt  76.txt
data/rag/: histoire_de_france.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
(+19 files in other folders)
